org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestCompileError1.java
package invalid;

public class TestCompileError1 {
	public void main() {
		/*]*/foo();/*[*/
	}
	
	public void foo() {
		T t= null;
	}
}
